# cpp_project_template

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  stringutil.cpp  stringutil.h
